CREATE TABLE "user" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "username" varchar(50) UNIQUE NOT NULL,
  "password" varchar(128) NOT NULL,
  "full_name" varchar(255) NOT NULL,
  "gender" char(1) NOT NULL,
  "is_host" bool DEFAULT false,
  "created_at" timestamp DEFAULT 'now()'
);

CREATE TABLE "event" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "host_id" integer NOT NULL,
  "name" integer NOT NULL,
  "description" varchar(1024),
  "capacity" integer NOT NULL,
  "start_at" timestamp NOT NULL,
  "end_at" timestamp NOT NULL,
  "created_at" timestamp DEFAULT 'now()'
);

CREATE TABLE "ticket_type" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "event_id" integer NOT NULL,
  "name" varchar(100) NOT NULL,
  "description" varchar(1024),
  "price" decimal(16,2) NOT NULL,
  "total_quantity" int NOT NULL,
  "created_at" timestamp DEFAULT 'now()'
);

CREATE TABLE "ticket" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "ticket_type_id" int NOT NULL,
  "owner_id" int NOT NULL,
  "purchased_at" timestamp DEFAULT 'now()'
);

ALTER TABLE "event" ADD FOREIGN KEY ("host_id") REFERENCES "user" ("id");

ALTER TABLE "ticket_type" ADD FOREIGN KEY ("event_id") REFERENCES "event" ("id") ON DELETE CASCADE ON UPDATE CASCADE;

ALTER TABLE "ticket" ADD FOREIGN KEY ("ticket_type_id") REFERENCES "ticket_type" ("id") ON DELETE RESTRICT ON UPDATE RESTRICT;

ALTER TABLE "ticket" ADD FOREIGN KEY ("owner_id") REFERENCES "user" ("id") ON DELETE CASCADE ON UPDATE CASCADE;
